--- a/Sito_web/templates/home.html
+++ b/Sito_web/templates/home.html
@@ -157,9 +157,8 @@
       <div class="d-flex justify-content-center">
         <!-- Bottoni per operazioni -->
         <a href="{{ url_for('visualizza_dati') }}" class="btn btn-outline-dark btn-lg mx-2" style="color: White">Visualizzazione dati</a>
-        <a href="{{ url_for('grafico1') }}" class="btn btn-outline-dark btn-lg mx-2" style="color: White" >Grafico 1</a>
-        <a href="{{ url_for('grafico2') }}" class="btn btn-outline-dark btn-lg mx-2" style="color: White">Grafico 2</a>
         <a href="{{ url_for('graficiinterattivi') }}" class="btn btn-outline-dark btn-lg mx-2" style="color: White">Grafici interattivi</a>
+        <a href="{{ url_for('inserisci_dati') }}" class="btn btn-outline-dark btn-lg mx-2" style="color: White">Inserisci Dati</a>
       </div>
     </div>
   </section>
